--- a/partials/home.html
+++ b/partials/home.html
@@ -26,6 +26,7 @@
             <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         </figure>
         <p>The human brain is a very complicated organ. While the comparasin of the brain to a processor is not a perfect one, it is one of the best we have. Information processing of the brain starts with input from external sensory organs, which transform stimuli into <a href="http://www.teach-nology.com/teachers/methods/info_processing/">electrochemical signals.</a></p>
+        <p>Recently, IBM has developed the most "brain-like" chip to date with <a href="http://www.wired.com/2014/08/ibm-unveils-a-brain-like-chip-with-4000-processor-cores/">4,096 cores</a> which is meant to mimic a million neurons and 256 million synapses of the brain. This processor was put to the test at Stanford University's Hoover Tower and the processor was <a href="http://ilab.usc.edu/neo2/dataset/">able to recognize</a> things such as pedestrians and vehicles with 80% accuracy. </p>
     </section>
 </div>
 <!-- -------------------------------------------------------------------------------------------------------------------- -->
@@ -38,7 +39,7 @@
     <section class="right">
         <h2>What kind of hard drive would my brain be?</h2>
         <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
-        <p>text 2 text 2 text 2 text 2 </p>
+        <p>If every brain has about 100 billion neurons, and each neuron is capable of making about 1,000 connections that represent 1,000 synapses, then it can be estimated that the average human brain could hold roughly <a href="http://io9.com/if-your-brain-were-a-computer-how-much-storage-space-w-509687776">100 trillion</a> packets of data. If each packet is a byte, that would be equal to 100 terabytes of data. To put that in perspective, the average laptop has either 500gb or 1 tb of storage. Most enthusiast PC builders will have anywhere from 2 to 15 terabytes of data in their systems.</p>
     </section>
 </div>
 <!-- -------------------------------------------------------------------------------------------------------------------- -->
@@ -79,5 +80,7 @@
         <h2>Can my brain have malware?</h2>
         <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         <p>One main important difference between complications with the brain and malware on a computer is that you cannot catch or remove mental disorders -- no matter what Jenny McCarthy says.</p>
+        <p> One more known mental disorder is Autism. Autism is caused when a number of mutations occur <a href="https://www.autismspeaks.org/what-autism">before and during birth</a> Autism could be compared to a common computer virus. A virus will enter a system and change the way the system behaves. If a virus is injected into a certain executable, one could call that a "mutation". </p>
+        <p>One type of brain disease that can be caught is <a href="http://www.webmd.com/a-to-z-guides/understanding-encephalitis-basics">encephalitis.</a> Encephalitis is inflammation of the brain tissue, usually caused by a bacterial infection during or after the host had a viral infection such as influenza or measles. The computer malware most related to encephalitis would be a Trojan Horse. Trojans enter the system under unrelated pretense and then mutate and wreck havok. Like encephalitis can be a result of another viral illness, a Trojan Horse enters a system under the guise of a different software. Also, it takes a great anti-virus software to catch and delete Trojan Horse's just as it takes powerful antibiotics to cure encephalitis.</p>
     </section>
 </div>
