changed names of pics

--- a/partials/home.html
+++ b/partials/home.html
@@ -17,7 +17,7 @@
 <div class="main-content" ng-show="home.isView(1)">
     <section class="left">
         <h2>What is a processor?</h2>
-    	<img src="images/CPU.jpg" style="width: 200px;" alt="CPU or Central Processing unit">
+    	<img src="images/cpu.jpg" style="width: 200px;" alt="CPU or Central Processing unit">
         <p>The <a href = "https://www.youtube.com/watch?v=bcVBqwlnmlM">CPU or processor</a> is the brain of the computer. All information processing is done by the processor. The processor tells the computer what to do and when to do it. The speed of a CPU's information processing is measured in Megahertz or MHz. Processors also have cores, which are the processors way of multitasking. A CPU with 6 cores can process 6 different tasks at the same time. Hyperthreading is a technology that can benefit performance of multi-threaded applications that more efficiently schedules data manipulation from existing cores. A great, broken down explanation of hyperthreading can be found <a href="https://www.youtube.com/watch?v=wnS50lJicXc">here</a></p>
     </section>
     <section class="right">
@@ -46,7 +46,7 @@
 <div class="main-content" ng-show="home.isView(3)">
     <section class="left">
         <h2>What is RAM?</h2>
-        <img src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here">
+        <img src="images/ram.jpg" style="width: 200px;" alt="smart things go on here">
         <p>RAM or Random Access Memory is a the short-term memory of the computer. RAM comes in long thin sticks and plugs into the Motherboard of the system. RAM sizes are measured in Gigabytes or gb. RAM sizes start at 2gb and increase by factors of two with 4gb, 8gb, 16gb and so forth options being available.</p>
 
         <p> Any program the computer uses has parts loaded into RAM while it is running. For example, if a user opens up <a href="https://www.spotify.com/us/">Spotify</a> and selects their favorite song, the computer will load some Spotify functionality as well as the song onto the RAM for access and playback. If too much RAM is used, in cases such as having too many Google Chrome tabs open, the computer will resort to storing data on the <a href ng-click="home.setView(2)">Hard Drive </a> which can vastly slow down performance.</p>
