changed processing speed -> processor

--- a/partials/home.html
+++ b/partials/home.html
@@ -3,7 +3,7 @@
 </header>
 <nav>
     <ul>
-        <li><a ng-click="home.setView(1)">Processing Speed</a>
+        <li><a ng-click="home.setView(1)">Processor</a>
         </li>
         <li><a ng-click="home.setView(2)">Hard Drive</a>
         </li>
