--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ infection{
     font-weight: bold;
 }
 
+a{
+	text-decoration:none;
+	color: #FF6633;
+}
+
 header{
 	width:100%;
 	text-align:center;
