--- a/partials/home.html
+++ b/partials/home.html
@@ -17,13 +17,13 @@
 <div class="main-content" ng-show="home.isView(1)">
     <section class="left">
         <h2>What is a processor?</h2>
-    	<img src="images/CPU.jpg" style="width: 200px;" alt="CPU or Central Processing unit">
+    	<img class ="center" src="images/CPU.jpg" style="width: 200px;" alt="CPU or Central Processing unit">
         <p>The <a href = "https://www.youtube.com/watch?v=bcVBqwlnmlM">CPU or processor</a> is the brain of the computer. All information processing is done by the processor. The processor tells the computer what to do and when to do it. The speed of a CPU's information processing is measured in Megahertz or MHz. Processors also have cores, which are the processors way of multitasking. A CPU with 6 cores can process 6 different tasks at the same time. Hyperthreading is a technology that can benefit performance of multi-threaded applications that more efficiently schedules data manipulation from existing cores. A great, broken down explanation of hyperthreading can be found <a href="https://www.youtube.com/watch?v=wnS50lJicXc">here</a></p>
     </section>
     <section class="right">
         <h2>What kind of processor would my brain be?</h2>
         <figure>
-            <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
+            <img class ="center" src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         </figure>
         <p>The human brain is a very complicated organ. While the comparasin of the brain to a processor is not a perfect one, it is one of the best we have. Information processing of the brain starts with input from external sensory organs, which transform stimuli into <a href="http://www.teach-nology.com/teachers/methods/info_processing/">electrochemical signals.</a></p>
         <p>Recently, IBM has developed the most "brain-like" chip to date with <a href="http://www.wired.com/2014/08/ibm-unveils-a-brain-like-chip-with-4000-processor-cores/">4,096 cores</a> which is meant to mimic a million neurons and 256 million synapses of the brain. This processor was put to the test at Stanford University's Hoover Tower and the processor was <a href="http://ilab.usc.edu/neo2/dataset/">able to recognize</a> things such as pedestrians and vehicles with 80% accuracy. </p>
@@ -33,12 +33,12 @@
 <div class="main-content" ng-show="home.isView(2)">
     <section class="left">
         <h2>What is a hard drive?</h2>
-            <img src="images/harddrive.jpg" style="width: 200px;" alt="smart things go on here">
+            <img class ="center" src="images/harddrive.jpg" style="width: 200px;" alt="smart things go on here">
         <p>A hard disk drive (sometimes abbreviated as Hard drive, HD, or HDD) is a device used to permanently store and also retrieve information. There are many variations, but their sizes are generally 3.5" and 2.5" for desktop and laptop computers respectively. A hard drive consists of one or more platters to which data is written using a magnetic head, all inside of an air-sealed casing. Internal hard disks reside in a drive bay, connect to the motherboard using an ATA, SCSI, or SATA cable, and are powered by a connection to the PSU (power supply unit). The images below show the components of a hard drive inside of both desktop and laptop computers.</p>
     </section>
     <section class="right">
         <h2>What kind of hard drive would my brain be?</h2>
-        <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
+        <img class ="center" src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         <p>If every brain has about 100 billion neurons, and each neuron is capable of making about 1,000 connections that represent 1,000 synapses, then it can be estimated that the average human brain could hold roughly <a href="http://io9.com/if-your-brain-were-a-computer-how-much-storage-space-w-509687776">100 trillion</a> packets of data. If each packet is a byte, that would be equal to 100 terabytes of data. To put that in perspective, the average laptop has either 500gb or 1 tb of storage. Most enthusiast PC builders will have anywhere from 2 to 15 terabytes of data in their systems.</p>
     </section>
 </div>
@@ -46,7 +46,7 @@
 <div class="main-content" ng-show="home.isView(3)">
     <section class="left">
         <h2>What is RAM?</h2>
-        <img src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here">
+        <img class ="center" src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here">
         <p>RAM or Random Access Memory is a the short-term memory of the computer. RAM comes in long thin sticks and plugs into the Motherboard of the system. RAM sizes are measured in Gigabytes or gb. RAM sizes start at 2gb and increase by factors of two with 4gb, 8gb, 16gb and so forth options being available.</p>
 
         <p> Any program the computer uses has parts loaded into RAM while it is running. For example, if a user opens up <a href="https://www.spotify.com/us/">Spotify</a> and selects their favorite song, the computer will load some Spotify functionality as well as the song onto the RAM for access and playback. If too much RAM is used, in cases such as having too many Google Chrome tabs open, the computer will resort to storing data on the <a href ng-click="home.setView(2)">Hard Drive </a> which can vastly slow down performance.</p>
@@ -54,7 +54,7 @@
     <section class="right">
         <h2>How much RAM does my brain have?</h2>
         <figure>
-            <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
+            <img class ="center" src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         </figure>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;To put it plainly, not much. The human brain can only store about <a href="http://www.simplypsychology.org/short-term-memory.html"> 5 to 9 items </a> in their short-term memory. This theory was created by <a href="http://psychclassics.yorku.ca/Miller/">George A. Miller</a> in 1956 where he put volunteers through the digit-span test you can take <a href="http://www.cambridgebrainsciences.com/browse/memory/test/digit-span"> here </a>
         </p>
@@ -66,7 +66,7 @@
 <div class="main-content" ng-show="home.isView(4)">
     <section class="left">
         <h2>What is malware??</h2>
-            <img src="images/malware.jpg" style="width: 200px;" alt="smart things go on here">
+            <img class ="center" src="images/malware.jpg" style="width: 200px;" alt="smart things go on here">
         <p>Malware is any software designed to damage or do unwanted actions on a computer system. Common examples of malware include Malware can come in many different variations such as <a href="http://techterms.com/definition/virus">Viruses</a>, <a href="http://techterms.com/definition/trojanhorse">Trojan Horses</a>, and <a href="http://techterms.com/definition/spyware">Spyware</a>. </p>
         <p><infection>Viruses </infection> are small programs or scripts (series of commands a computer follows like cooking directions) that can negatively affect the operations of a computer.Viruses have been known to create, move, and erase files, consume a computer's memory or <a href ng-click="home.setView(3)">RAM</a> or cause a computer not to function correctly. Like real world viruses, they are known to duplicate themselves and spread to other systems -- commonly through infected emails.
         </p>
@@ -78,7 +78,7 @@
     </section>
     <section class="right">
         <h2>Can my brain have malware?</h2>
-        <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
+        <img class ="center" src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         <p>One main important difference between complications with the brain and malware on a computer is that you cannot catch or remove mental disorders -- no matter what Jenny McCarthy says.</p>
         <p> One more known mental disorder is Autism. Autism is caused when a number of mutations occur <a href="https://www.autismspeaks.org/what-autism">before and during birth</a> Autism could be compared to a common computer virus. A virus will enter a system and change the way the system behaves. If a virus is injected into a certain executable, one could call that a "mutation". </p>
         <p>One type of brain disease that can be caught is <a href="http://www.webmd.com/a-to-z-guides/understanding-encephalitis-basics">encephalitis.</a> Encephalitis is inflammation of the brain tissue, usually caused by a bacterial infection during or after the host had a viral infection such as influenza or measles. The computer malware most related to encephalitis would be a Trojan Horse. Trojans enter the system under unrelated pretense and then mutate and wreck havok. Like encephalitis can be a result of another viral illness, a Trojan Horse enters a system under the guise of a different software. Also, it takes a great anti-virus software to catch and delete Trojan Horse's just as it takes powerful antibiotics to cure encephalitis.</p>
