--- a/partials/home.html
+++ b/partials/home.html
@@ -45,8 +45,8 @@
 <!-- -------------------------------------------------------------------------------------------------------------------- -->
 <div class="main-content" ng-show="home.isView(3)">
     <section class="left">
-        <h2>What is RAM?</h2>
-        <img class ="center" src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here">
+        <h2>What is RAM?
+        <img class ="center" src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here"></h2>
         <p>RAM or Random Access Memory is a the short-term memory of the computer. RAM comes in long thin sticks and plugs into the Motherboard of the system. RAM sizes are measured in Gigabytes or gb. RAM sizes start at 2gb and increase by factors of two with 4gb, 8gb, 16gb and so forth options being available.</p>
 
         <p> Any program the computer uses has parts loaded into RAM while it is running. For example, if a user opens up <a href="https://www.spotify.com/us/">Spotify</a> and selects their favorite song, the computer will load some Spotify functionality as well as the song onto the RAM for access and playback. If too much RAM is used, in cases such as having too many Google Chrome tabs open, the computer will resort to storing data on the <a href ng-click="home.setView(2)">Hard Drive </a> which can vastly slow down performance.</p>
