undo center, looks bad

--- a/partials/home.html
+++ b/partials/home.html
@@ -45,8 +45,8 @@
 <!-- -------------------------------------------------------------------------------------------------------------------- -->
 <div class="main-content" ng-show="home.isView(3)">
     <section class="left">
-        <h2>What is RAM?
-        <img class ="center" src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here"></h2>
+        <h2>What is RAM?</h2>
+        <img src="images/RAM.jpg" style="width: 200px;" alt="smart things go on here">
         <p>RAM or Random Access Memory is a the short-term memory of the computer. RAM comes in long thin sticks and plugs into the Motherboard of the system. RAM sizes are measured in Gigabytes or gb. RAM sizes start at 2gb and increase by factors of two with 4gb, 8gb, 16gb and so forth options being available.</p>
 
         <p> Any program the computer uses has parts loaded into RAM while it is running. For example, if a user opens up <a href="https://www.spotify.com/us/">Spotify</a> and selects their favorite song, the computer will load some Spotify functionality as well as the song onto the RAM for access and playback. If too much RAM is used, in cases such as having too many Google Chrome tabs open, the computer will resort to storing data on the <a href ng-click="home.setView(2)">Hard Drive </a> which can vastly slow down performance.</p>
@@ -54,7 +54,7 @@
     <section class="right">
         <h2>How much RAM does my brain have?</h2>
         <figure>
-            <img class ="center" src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
+            <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         </figure>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;To put it plainly, not much. The human brain can only store about <a href="http://www.simplypsychology.org/short-term-memory.html"> 5 to 9 items </a> in their short-term memory. This theory was created by <a href="http://psychclassics.yorku.ca/Miller/">George A. Miller</a> in 1956 where he put volunteers through the digit-span test you can take <a href="http://www.cambridgebrainsciences.com/browse/memory/test/digit-span"> here </a>
         </p>
@@ -66,7 +66,7 @@
 <div class="main-content" ng-show="home.isView(4)">
     <section class="left">
         <h2>What is malware??</h2>
-            <img class ="center" src="images/malware.jpg" style="width: 200px;" alt="smart things go on here">
+            <img src="images/malware.jpg" style="width: 200px;" alt="smart things go on here">
         <p>Malware is any software designed to damage or do unwanted actions on a computer system. Common examples of malware include Malware can come in many different variations such as <a href="http://techterms.com/definition/virus">Viruses</a>, <a href="http://techterms.com/definition/trojanhorse">Trojan Horses</a>, and <a href="http://techterms.com/definition/spyware">Spyware</a>. </p>
         <p><infection>Viruses </infection> are small programs or scripts (series of commands a computer follows like cooking directions) that can negatively affect the operations of a computer.Viruses have been known to create, move, and erase files, consume a computer's memory or <a href ng-click="home.setView(3)">RAM</a> or cause a computer not to function correctly. Like real world viruses, they are known to duplicate themselves and spread to other systems -- commonly through infected emails.
         </p>
@@ -78,7 +78,7 @@
     </section>
     <section class="right">
         <h2>Can my brain have malware?</h2>
-        <img class ="center" src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
+        <img src="images/brain.jpg" style="width: 200px;" alt="smart things go on here">
         <p>One main important difference between complications with the brain and malware on a computer is that you cannot catch or remove mental disorders -- no matter what Jenny McCarthy says.</p>
         <p> One more known mental disorder is Autism. Autism is caused when a number of mutations occur <a href="https://www.autismspeaks.org/what-autism">before and during birth</a> Autism could be compared to a common computer virus. A virus will enter a system and change the way the system behaves. If a virus is injected into a certain executable, one could call that a "mutation". </p>
         <p>One type of brain disease that can be caught is <a href="http://www.webmd.com/a-to-z-guides/understanding-encephalitis-basics">encephalitis.</a> Encephalitis is inflammation of the brain tissue, usually caused by a bacterial infection during or after the host had a viral infection such as influenza or measles. The computer malware most related to encephalitis would be a Trojan Horse. Trojans enter the system under unrelated pretense and then mutate and wreck havok. Like encephalitis can be a result of another viral illness, a Trojan Horse enters a system under the guise of a different software. Also, it takes a great anti-virus software to catch and delete Trojan Horse's just as it takes powerful antibiotics to cure encephalitis.</p>
